--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
+numpy
 Django==3.2.4
 requests==2.25.1
 yfinance==0.1.63
 alpha_vantage==2.3.1
 beautifulsoup4==4.9.3
 pandas==1.3.3
-numpy==1.21.2
+
 statsmodels==0.12.2
 scikit-learn==0.24.2
 matplotlib==3.4.3
